# easy-control

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
src/: App.css  App.tsx  Navigate.tsx  constant.ts  main.rs
src-tauri/: .gitignore  Cargo.toml  setting-mapping-refer.conf.json  setting.conf.json  share-mouse.conf.json  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/services/: block_event_control_service.rs  client_step_service.rs  handle_event_service.rs  mod.rs  mouse_control_service.rs  protocol_service.rs  screen_event_service.rs  screen_service.rs  server_step_service.rs  step_control_service.rs  system_service.rs
src-tauri/src/components/: handle_screen_component.rs  mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/pojo/: mod.rs  screen_selector_pojo.rs
src-tauri/src/domain/repositories/: mod.rs  screen_mapping_matrix_repository.rs  screen_mapping_refer_repository.rs  screen_selector_repository.rs  setting_repository.rs
src-tauri/src/domain/services/: mod.rs  screen_service.rs  setting_service.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/api/: axum_config.rs
src-tauri/src/infrastructure/client/: rest_client.rs
src-tauri/src/infrastructure/database/: mod.rs
src-tauri/src/infrastructure/database/json_file/: mod.rs
src-tauri/src/infrastructure/database/sqlite/: sqlite_database.rs  sqlite_init_database.rs
src-tauri/src/infrastructure/database/store_file/: mod.rs
src-tauri/src/infrastructure/log/: log_custom.rs
src-tauri/src/infrastructure/thread_async/: mod.rs
src-tauri/src/infrastructure/udp/: mod.rs  socket_udp.rs
src-tauri/src/presentation/: mod.rs
src-tauri/src/presentation/controllers/: mod.rs  protocol_controller.rs  role_controller.rs  screen_controller.rs
src-tauri/src/presentation/models/: mouse_event_model.rs  screen_model.rs
src-tauri/src/presentation/routers/: axum_route.rs  mod.rs  tauri_command.rs
src-tauri/src/shared/: mod.rs
src-tauri/src/shared/constants/: rest_client_constant.rs  step_control_constant.rs
src-tauri/src/shared/lib/: lib_event.rs  mod.rs
src-tauri/src/shared/rest_client/: mouse_event_rest_client.rs  screen_mapping_matrix_rest_client.rs  system_detail_rest_client.rs
src-tauri/src/shared/stores/: mod.rs  mouse_control_store.rs  role_event_store.rs  screen_event_store.rs  setting_json.rs  setting_mapping_refer_json.rs  step_control_store.rs  store_json.rs
src-tauri/src/shared/types/: file_store_type.rs  mod.rs  mouse_type.rs  protocol_type.rs  response_type.rs  screen_type.rs  system_type.rs
src-tauri/src/shared/utils/: mouse_util.rs  protocol_util.rs  screen_util.rs  system_util.rs
src-tauri/src/shared/utils/convert/: byte_convert.rs  mod.rs
src-tauri/src/shared/utils/mapping/: mod.rs
src/application/services/: block_event_control_service.rs  control_service.rs  mod.rs  mouse_control_service.rs  mouse_event_service.rs  protocol_service.rs  role_control_service.rs  screen_event_service.rs  screen_service.rs  server_step_service.rs  step_control_service.rs  system_service.rs
src/components/board/: index.tsx
src/components/button/: struct.ts
src/components/shape/: struct.ts
src/domain/: mod.rs
src/domain/pojo/: mod.rs  screen_mapping_matrix_pojo.rs  screen_mapping_refer_pojo.rs  screen_selector_pojo.rs  setting_pojo.rs
src/domain/repositories/: mod.rs  screen_mapping_matrix_repository.rs  screen_mapping_metric_repository.rs  screen_mapping_refer_repository.rs  screen_selector_repository.rs
src/domain/services/: mod.rs  screen_screen.rs  screen_service.rs
src/infrastructure/: mod.rs
src/infrastructure/api/: axum_config.rs
src/infrastructure/database/: mod.rs  sqlite_database.rs  sqlite_init_database.rs
src/infrastructure/log/: log_custom.rs  mod.rs
src/infrastructure/thread_async/: mod.rs
src/pages/Client/: index.tsx
src/pages/Home/: index.tsx  stype.css
src/pages/Server/: index.tsx  stype.css
src/pages/Setting/: index.tsx
src/presentation/controllers/: actuator_controller.rs  mod.rs  mouse_event_controller.rs  protocol_controller.rs  role_controller.rs  screen_controller.rs  system_controller.rs
src/presentation/models/: mod.rs  (+2 more)
src/shared/: mod.rs
src/ui/: mod.rs
unui/: .env  .prettierrc.json
(+82 files in other folders)
