[package]
name = "share-mouse"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = ["winuser"] }
log = "0.4"
env_logger = "0.10"
dotenvy = "0.15"
winit = "0.28"
axum = "0.7.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.1", features = ["full"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
telnet = "0.2.2"
get_if_addrs = "0.5.3"
ipconfig = "0.3.2"
ping = "0.5.2"
hostname = "0.3"
