[package]
name = "share-mouse"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
log = "0.4"
dotenvy = "0.15"
winit = "0.30.5"
axum = "0.7.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }
serde_json = { version = "1.0" }
serde = { version = "1.0.213", features = ["derive"] }
telnet = "0.2.2"
ipconfig = "0.3.2"
ping = "0.5.2"
hostname = "0.4.0"
quinn = "0.11.5"
reqwest = { version = "0.12.8", features = ["json"] }
rdev = "0.5.3"
pnet = "0.35.0"
chrono = "0.4"