[package]
name = "easy-control-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["https://github.com/narawichsaphimarn"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "easy_control_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
ping = "0.5.2"
ipconfig = "0.3.2"
tokio = { version = "1.42.0", features = ["full"] }
hostname = "0.4.0"
winapi = { version = "0.3", features = ["winuser", "windef", "minwindef", "winnt", "libloaderapi", "wingdi", "errhandlingapi"] }
reqwest = { version = "0.12.9", features = ["json"] }
axum = "0.7.7"
tower-http = { version = "0.6.1", features = ["full"] }
rdev = "0.5.3"
pnet = "0.35.0"
telnet = "0.2.2"

[package.metadata.scripts]
run = "cargo tauri dev"
build = "cargo tauri build"
reformat = "cargo fmt"
check = "cargo check"
release = "cargo build --release"
